--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -7,7 +7,16 @@
     <title>Væskebalancen</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="">Om os</a>
+            <a href="">Ølspecialiteter</a>
+            <a href="">Begivenheder</a>
+            <a href="">Kontakt</a>
+        </nav>
+
+        <nav class="navmobil"></nav>
+    </header>
 
     <main></main>
 
