tilføjet ikoner, opateret index

--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Væskebalancen</title>
 </head>
+
 <body>
     <header>
+        <img src="images/logolaptop.png" alt="logo">
+
         <nav>
             <a href="">Om os</a>
             <a href="">Ølspecialiteter</a>
@@ -20,7 +24,24 @@
 
     <main></main>
 
-    <footer></footer>
-    
+    <footer>
+        <div>
+            <h1>Væskebalancen bar</h1>
+            <ul>
+                <img src="images/ikoner/facebook.png" alt="facebook ikon">
+                <img src="images/ikoner/instagram.png" alt="instagram ikon">
+                <img src="images/ikoner/untappd.png" alt="untappd ikon">
+            </ul>
+        </div>
+
+        <div>
+            
+        </div>
+
+
+
+    </footer>
+
 </body>
+
 </html>
