--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -13,9 +13,9 @@
         <img src="images/logolaptop.png" alt="logo">
 
         <nav>
-            <a href="">Om os</a>
-            <a href="">Ølspecialiteter</a>
-            <a href="">Begivenheder</a>
+            <a href="omos.html">Om os</a>
+            <a href="øl.html">Ølspecialiteter</a>
+            <a href="begivenheder.html">Begivenheder</a>
             <a href="">Kontakt</a>
         </nav>
 
@@ -35,10 +35,25 @@
         </div>
 
         <div>
-            
+            <h2>Adresse</h2>
+            <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+
+            <h2>Telefonnummer</h2>
+            <p><a href="tel:+4560578452">+45 60 57 84 52</a> </p>
         </div>
 
-
+        <div>
+            <h2>Åbningstider</h2>
+            <ul>
+                <p>Mandag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Tirsdag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Onsdag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Torsdag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Fredag: <time>12:00</time> - <time>02:00</time></p>
+                <p>Lørdag: <time>12:00</time> - <time>02:00</time></p>
+                <p>Søndag: <time>14:00</time> - <time>22:00</time></p>
+            </ul>
+        </div>
 
     </footer>
 
