--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -10,14 +10,14 @@
 <body>
 
 <main>
-
+<!--HEADER-->
     <header>
         
     </header>
 
-    <section class="billede">
-        <img src="forsideomos.png" alt="forsideomos">
-    </section>
+
+
+<!--FØRSTE SECTION MED TEKST-->
     <section class="sectionet">
         <div class="divet">
             <h2>Om os</h2>
@@ -26,7 +26,11 @@
         </div>
     </section>
 
+<!--ANDEN SECTION MED TEKST OG BILLEDE-->
     <section class="sectionto">
+        <div class="billedeto">
+            <img src="images/glasomos.png" alt="glasomos">
+        </div>
         <div class="divto">
             <h2>Startskuddet</h2>
             <p>Startskuddet til det vi kender som Væskebalancen startede under første nedlukning, hvor vi åbnede vores flaskeshop i Vestergade. Det blev hurtigt en succes og interessen for specialøl blev kun ved med at vokse.</p>
@@ -36,6 +40,7 @@
         </div>
     </section>
 
+<!--TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE-->
     <section class="sectiontre">
         <div class="divtre">
             <p>Vores kompetente personale står altid klar med smagsprøver og et smil på læben, så kom forbi og se om det også kunne blive dit helt eget stykke af paradis i en travl hverdag. 
@@ -43,6 +48,8 @@
             <p>Vi ses. </p>
         </div>
     </section>
+
+<!--FOOTER-->
     <footer>
 
     </footer>
