--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ølspecialiteter</title>
+    <link href="øl.css" rel="stylesheet">
 </head>
 <body>
     
