Header og første billede

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="stylesbegivnheder.css">
 </head>
 <body>
+
+<section class="header"><h2>Begivenheder</h2> </section>
+
+<section class="cardet">
+<div class="image"></div>
+<div class="textet">
+    <h1>Hygge</h1>
+    <p>Vi byder ikke kun på gode øl og god stemning hos Væskebalancen. Om det er brætspilsaften med studiegruppen eller en fodboldkamp med drengene på fladskærm, så har vi det. </p>
+</div>
+</section>
+
+<section class="cardto">
+    <div class="imageto"></div>
+    <div class="textto">
+        <h1>Brætspil</h1>
+        <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
+    </div>
+    </section>
+
+
+
     
 </body>
 </html>
