--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -8,6 +8,17 @@
     <link href="øl.css" rel="stylesheet">
 </head>
 <body>
+    <header></header>
+
+    <main>
+        <!--SIDENS HOVEDOVERSKRIFT-->
+        <section class="sideoverskrift">
+            <h1>Ølspecialiteter</h1>
+        </section>
+
+    </main>
+
+    <footer></footer>
     
 </body>
 </html>
