--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -16,6 +16,10 @@
             <h1>Ølspecialiteter</h1>
         </section>
 
+        <section>
+            
+        </section>
+
     </main>
 
     <footer></footer>
