--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Ølspecialiteter</title>
     <link href="øl.css" rel="stylesheet">
 </head>
+
 <body>
     <header></header>
 
@@ -17,12 +19,26 @@
         </section>
 
         <section>
-            
+            <div><img src="images/udvalg.png"></div>
+            <div>
+                <h1>Vores udvalg</h1>
+                <p>Hos Væskebalancen har vi altid 14 øl på fad - derunder to faste - og køleskabet fyldt til randen med
+                    øl på både dåse og flaske. Øllene bliver skiftet ud tre gange om ugen, så der er altid noget nyt at
+                    prøve.
+                    <br>
+                    Nedenfor på siden kan du se vores liste, som selvfølgelig bliver opdateret løbende, så du altid kan
+                    se det nyeste.
+                </p>
+            </div>
+
+
+
         </section>
 
     </main>
 
     <footer></footer>
-    
+
 </body>
+
 </html>
