bølger og opdateret øl

--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -18,20 +18,19 @@
             <h1>Ølspecialiteter</h1>
         </section>
 
+        <!--KORT: VORES UDVALG-->
         <section>
-            <div><img src="images/udvalg.png"></div>
+            <div></div>
             <div>
                 <h1>Vores udvalg</h1>
                 <p>Hos Væskebalancen har vi altid 14 øl på fad - derunder to faste - og køleskabet fyldt til randen med
                     øl på både dåse og flaske. Øllene bliver skiftet ud tre gange om ugen, så der er altid noget nyt at
                     prøve.
-                    <br>
+                    <br><br>
                     Nedenfor på siden kan du se vores liste, som selvfølgelig bliver opdateret løbende, så du altid kan
                     se det nyeste.
                 </p>
             </div>
-
-
 
         </section>
 
