Resten af kort med tekst osv.

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -20,13 +20,29 @@
 </section>
 
 <section class="cardto">
-    <div class="imageto"></div>
     <div class="textto">
         <h1>Brætspil</h1>
         <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
     </div>
+    <div class="imageto"></div>
+</section>
+
+<section class="cardtre">
+    <div class="imagetre"></div>
+    <div class="texttre">
+        <h1>Ølsmagninger</h1>
+        <p>Derudover tilbyder vi også ølsmagninger ud-af-huset. Det kan passe til både den næste firmafest eller polterabend. Skriv gerne en besked eller ring til os med jeres ønsker - det praktiske finder I inde under kontaktsiden. </p>
+        <button class="button" type="button">Kontakt os</button>
+    </div>
     </section>
 
+    <section class="cardfire">
+        <div class="textfire">
+            <h1>Fodbold</h1>
+            <p>Hvis det lille kollegieværelse bliver for småt til fredagens kamp, så kom forbi hos os. Vi ser de fleste kampe på fladskærm. Fodbold, glade venner og en kold fadøl - what’s not to like? </p>
+        </div>
+        <div class="imagefire"></div>
+    </section>
 
 
     
