billeder og ølspecialitet

--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -20,7 +20,7 @@
 
         <!--KORT: VORES UDVALG-->
         <section>
-            <div></div>
+            <div><img src="images/udvalg2.png"></div>
             <div>
                 <h1>Vores udvalg</h1>
                 <p>Hos Væskebalancen har vi altid 14 øl på fad - derunder to faste - og køleskabet fyldt til randen med
@@ -31,6 +31,12 @@
                     se det nyeste.
                 </p>
             </div>
+
+        </section>
+
+        <!--ØL MENU-->
+        <section>
+            
 
         </section>
 
