--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -22,7 +22,7 @@
             <a href="">Kontakt</a>
         </nav>
 
-        <nav class="navmobil"></nav>
+        <nav class="navmobil"><i class="fa-solid fa-bars"></i></nav>
 
     </header>
 
