nye bølger i bølgemappe

--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -15,7 +15,10 @@
     <header></header>
 
     <main>
-        <section><img src="images/ølspecialiteter.png" alt="øl"></section>
+        <!--TOP BILLEDE-->
+        <div class="topbillede"></div>
+        <div class="bølger"><img src="images/bølger/to-bølger.svg" alt="bølger"></div>
+
 
         <!--SIDENS HOVEDOVERSKRIFT-->
         <section class="sideoverskrift">
@@ -23,7 +26,7 @@
         </section>
 
         <!--KORT: VORES UDVALG-->
-        <section>
+        <section class="kortudvalg">
             <div><img src="images/udvalg2.png"></div>
             <div>
                 <h1>Vores udvalg</h1>
@@ -39,7 +42,7 @@
         </section>
 
         <!--ØL MENU-->
-        <section>
+        <section class="ølmenu">
             
 
         </section>
