--- a/omos.html
+++ b/omos.html
@@ -12,12 +12,28 @@
 <main>
 <!--HEADER-->
     <header>
+        <img src="images/logo2.png" alt="logo">
         
+        <nav>
+            <a href="omos.html">Om os</a>
+            <a href="øl.html">Ølspecialiteter</a>
+            <a href="begivenheder.html">Begivenheder</a>
+            <a href="">Kontakt</a>
+        </nav>
+
+        <nav class="navmobil"></nav>
     </header>
 
 <!--BAGGRUNDSBILLEDE-->
 <section class="billedeet">
     <div class="billedeet"></div>
+</section>
+
+<!--BØLGE-->
+<section class="wave">
+    <div class="wave">
+        <img src="images/2bølger.png" alt="wave">
+    </div>
 </section>
 
 <!--FØRSTE SECTION MED TEKST-->
@@ -54,7 +70,35 @@
 
 <!--FOOTER-->
     <footer>
+        <div>
+            <h1>Væskebalancen bar</h1>
+            <ul>
+                <img src="images/ikoner/facebook.png" alt="facebook ikon">
+                <img src="images/ikoner/instagram.png" alt="instagram ikon">
+                <img src="images/ikoner/untappd.png" alt="untappd ikon">
+            </ul>
+        </div>
 
+        <div>
+            <h2>Adresse</h2>
+            <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+
+            <h2>Telefonnummer</h2>
+            <p><a href="tel:+4560578452">+45 60 57 84 52</a> </p>
+        </div>
+
+        <div>
+            <h2>Åbningstider</h2>
+            <ul>
+                <p>Mandag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Tirsdag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Onsdag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Torsdag: <time>14:00</time> - <time>00:00</time></p>
+                <p>Fredag: <time>12:00</time> - <time>02:00</time></p>
+                <p>Lørdag: <time>12:00</time> - <time>02:00</time></p>
+                <p>Søndag: <time>14:00</time> - <time>22:00</time></p>
+            </ul>
+        </div>
     </footer>
 </main>
     
