Ændrede det hele fordi intet virkede :(((

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -11,39 +11,39 @@
 
 <section class="header"><h2>Begivenheder</h2> </section>
 
-<section class="cardet">
-<div class="image"></div>
-<div class="textet">
+<section class=sektioner>
+    <div class="img"><img src="images/hygge.png" alt=""></div>
+<div class="text">
     <h1>Hygge</h1>
     <p>Vi byder ikke kun på gode øl og god stemning hos Væskebalancen. Om det er brætspilsaften med studiegruppen eller en fodboldkamp med drengene på fladskærm, så har vi det. </p>
 </div>
 </section>
 
-<section class="cardto">
-    <div class="textto">
+<section class=sektioner>
+    <div class="text">
         <h1>Brætspil</h1>
         <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
     </div>
-    <div class="imageto"></div>
+    <div class="img"><img src="images/brætspil.png" alt=""></div>
 </section>
 
-<section class="cardtre">
-    <div class="imagetre"></div>
-    <div class="texttre">
+<section class=sektioner>
+    <div class="img"><img src="images/ølsmagninger.png" alt=""></div>
+    <div class="text">
         <h1>Ølsmagninger</h1>
         <p>Derudover tilbyder vi også ølsmagninger ud-af-huset. Det kan passe til både den næste firmafest eller polterabend. Skriv gerne en besked eller ring til os med jeres ønsker - det praktiske finder I inde under kontaktsiden. </p>
         <button class="button" type="button">Kontakt os</button>
     </div>
-    </section>
+</section>
 
-    <section class="cardfire">
-        <div class="textfire">
+<section class=sektioner>
+        <div class="text">
             <h1>Fodbold</h1>
-            <p>Hvis det lille kollegieværelse bliver for småt til fredagens kamp, så kom forbi hos os. Vi ser de fleste kampe på fladskærm. Fodbold, glade venner og en kold fadøl - what’s not to like? </p>
+            <p>Hvis det lille kollegieværelse bliver for småt til fredagens kamp, så kom forbi hos os. Vi ser de fleste kampe på fladskærm. Fodbold, glade venner og en kold fadøl - whats not to like? </p>
         </div>
-        <div class="imagefire"></div>
+        <div class="img"><img src="images/fodbold.png" alt=""></div>
     </section>
-
+</section>
 
     
 </body>
