Baggrundsbillede, bølge mm.

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -9,8 +9,37 @@
 </head>
 <body>
 
+
+<!--Header-->
+    <header>
+        <img src="images/logo2.png" alt="logo">
+        
+        <nav>
+            <a href="omos.html">Om os</a>
+            <a href="øl.html">Ølspecialiteter</a>
+            <a href="begivenheder.html">Begivenheder</a>
+            <a href="">Kontakt</a>
+        </nav>
+
+        <nav class="navmobil"></nav>
+    </header>
+
+<!--Baggrundsbillede-->
+<section class="baggrundbegivenheder"></section>
+
+<!--BØLGE-->
+<section class="wave">
+    <div class="wave">
+        <img src="images/2bølger.png" alt="wave">
+    </div>
+</section>
+
+<!--Overskrift-->
 <section class="header"><h2>Begivenheder</h2> </section>
 
+<!--Sektionerne på siden-->
+
+<!--Sektion 1-->
 <section class=sektioner>
     <div class="img"><img src="images/hygge.png" alt=""></div>
 <div class="text">
@@ -19,6 +48,7 @@
 </div>
 </section>
 
+<!--Sektion 2-->
 <section class=sektioner>
     <div class="text">
         <h1>Brætspil</h1>
@@ -27,6 +57,7 @@
     <div class="img"><img src="images/brætspil.png" alt=""></div>
 </section>
 
+<!--Sektion 3-->
 <section class=sektioner>
     <div class="img"><img src="images/ølsmagninger.png" alt=""></div>
     <div class="text">
@@ -36,6 +67,7 @@
     </div>
 </section>
 
+<!--Sektion 4-->
 <section class=sektioner>
         <div class="text">
             <h1>Fodbold</h1>
