--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -12,7 +12,7 @@
 
 <!--Header-->
     <header>
-        <img src="images/logo2.png" alt="logo">
+        <img src="images/logolaptop.png" alt="logo">
         
         <nav>
             <a href="omos.html">Om os</a>
@@ -30,12 +30,12 @@
 <!--BØLGE-->
 <section class="wave">
     <div class="wave">
-        <img src="images/2bølger.png" alt="wave">
+        <img src="images/bølger/to-bølger.svg" alt="wave">
     </div>
 </section>
 
 <!--Overskrift-->
-<section class="header"><h2>Begivenheder</h2> </section>
+<section class="overskrift"><h1>Begivenheder</h1> </section>
 
 <!--Sektionerne på siden-->
 
@@ -43,7 +43,7 @@
 <section class=sektioner>
     <div class="img"><img src="images/hygge.png" alt=""></div>
 <div class="text">
-    <h1>Hygge</h1>
+    <h2>Hygge</h2>
     <p>Vi byder ikke kun på gode øl og god stemning hos Væskebalancen. Om det er brætspilsaften med studiegruppen eller en fodboldkamp med drengene på fladskærm, så har vi det. </p>
 </div>
 </section>
@@ -51,17 +51,20 @@
 <!--Sektion 2-->
 <section class=sektioner>
     <div class="text">
-        <h1>Brætspil</h1>
+        <h2>Brætspil</h2>
         <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
     </div>
     <div class="img"><img src="images/brætspil.png" alt=""></div>
 </section>
 
+<section class="wave"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
+
+</section>
 <!--Sektion 3-->
 <section class=sektioner>
     <div class="img"><img src="images/ølsmagninger.png" alt=""></div>
     <div class="text">
-        <h1>Ølsmagninger</h1>
+        <h2>Ølsmagninger</h2>
         <p>Derudover tilbyder vi også ølsmagninger ud-af-huset. Det kan passe til både den næste firmafest eller polterabend. Skriv gerne en besked eller ring til os med jeres ønsker - det praktiske finder I inde under kontaktsiden. </p>
         <button class="button" type="button">Kontakt os</button>
     </div>
@@ -70,7 +73,7 @@
 <!--Sektion 4-->
 <section class=sektioner>
         <div class="text">
-            <h1>Fodbold</h1>
+            <h2>Fodbold</h2>
             <p>Hvis det lille kollegieværelse bliver for småt til fredagens kamp, så kom forbi hos os. Vi ser de fleste kampe på fladskærm. Fodbold, glade venner og en kold fadøl - whats not to like? </p>
         </div>
         <div class="img"><img src="images/fodbold.png" alt=""></div>
