--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -62,7 +62,7 @@
 
             <div class="ølliste">
                 <div class="faste-øl">
-                    <h2>Faste øl</h2>
+                    <h2 class="menu-overskrift" >Faste øl</h2>
                     <ol>
                         <li>hej</li>
                         <li>heh</li>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="nyeste-øl">
-                    <h2>Nyeste øl</h2>
+                    <h2 class="menu-overskrift" >Nyeste øl</h2>
                     <ol>
                         <li>hej</li>
                         <li>heh</li>
