--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="headerfooter.css">
     <title>Om os</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
 <!--BØLGE-->
 <section class="wave">
     <div class="wave">
-        <img src="images/2bølger.png" alt="wave">
+        <img src="images/bølger/to-bølger.svg" alt="wave">
     </div>
 </section>
 
@@ -69,23 +70,31 @@
     </section>
 
 <!--FOOTER-->
-    <footer>
-        <div>
+<footer>
+    <img src="images/bølger/to-bølger-omvendt.svg" class="to-bølger-omvendt" alt="omvendte bølger">
+    <section>
+        <section class="socials">
             <h1>Væskebalancen bar</h1>
-            <ul>
-                <img src="images/ikoner/facebook.png" alt="facebook ikon">
-                <img src="images/ikoner/instagram.png" alt="instagram ikon">
-                <img src="images/ikoner/untappd.png" alt="untappd ikon">
-            </ul>
-        </div>
 
-        <div>
-            <h2>Adresse</h2>
-            <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+            <div class="ikoner">
+                <a href="#"><i class="fa-brands fa-square-facebook fa-3x"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a>
+                <a href="#"><i class="fa-brands fa-untappd fa-3x"></i></a>
+            </div>
 
-            <h2>Telefonnummer</h2>
-            <p><a href="tel:+4560578452">+45 60 57 84 52</a> </p>
-        </div>
+        </section>
+
+        <section class="adresse-tlf">
+            <div>
+                <h2>Adresse</h2>
+                <p>Jægergårdsgade 2A, kælderen, 8000 Aarhus</p>
+            </div>
+
+            <div>
+                <h2>Telefonnummer</h2>
+                <p><a href="tel:+4560578452">+45 60 57 84 52</a></p>
+            </div>
+        </section>
 
         <div>
             <h2>Åbningstider</h2>
@@ -99,7 +108,9 @@
                 <p>Søndag: <time>14:00</time> - <time>22:00</time></p>
             </ul>
         </div>
-    </footer>
+    </section>
+
+</footer>
 </main>
     
 </body>
