Alt er ved at virke!
Juhuu nu virker mine billeder og min header :D

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Begivenheder</title>
     <link rel="stylesheet" href="stylesbegivnheder.css">
+    <link rel="stylesheet" href="headerfooter.css">
 </head>
 <body>
 
@@ -41,7 +42,7 @@
 
 <!--Sektion 1-->
 <section class=sektioner>
-    <div class="img"><img src="images/hygge.png" alt=""></div>
+    <div class="container"><img src="images/hygge.png" alt=""></div>
 <div class="text">
     <h2>Hygge</h2>
     <p>Vi byder ikke kun på gode øl og god stemning hos Væskebalancen. Om det er brætspilsaften med studiegruppen eller en fodboldkamp med drengene på fladskærm, så har vi det. </p>
@@ -54,15 +55,14 @@
         <h2>Brætspil</h2>
         <p>I en tid, hvor størstedelen af vores kommunikation foregår gennem en skærm er der noget specielt ved at bruge tid med venner og kigge dem man holder af i øjnene. Hvorfor ikke kombinere det med et brætspil og en specialøl? Det lyder som en perfekt fredag aften i vores ører. </p>
     </div>
-    <div class="img"><img src="images/brætspil.png" alt=""></div>
+    <div class="container"><img src="images/brætspil.png" alt=""></div>
 </section>
 
-<section class="wave"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
+<section class="waveto"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
 
-</section>
 <!--Sektion 3-->
 <section class=sektioner>
-    <div class="img"><img src="images/ølsmagninger.png" alt=""></div>
+    <div class="container"><img src="images/ølsmagninger.png" alt=""></div>
     <div class="text">
         <h2>Ølsmagninger</h2>
         <p>Derudover tilbyder vi også ølsmagninger ud-af-huset. Det kan passe til både den næste firmafest eller polterabend. Skriv gerne en besked eller ring til os med jeres ønsker - det praktiske finder I inde under kontaktsiden. </p>
@@ -76,7 +76,7 @@
             <h2>Fodbold</h2>
             <p>Hvis det lille kollegieværelse bliver for småt til fredagens kamp, så kom forbi hos os. Vi ser de fleste kampe på fladskærm. Fodbold, glade venner og en kold fadøl - whats not to like? </p>
         </div>
-        <div class="img"><img src="images/fodbold.png" alt=""></div>
+        <div class="container"><img src="images/fodbold.png" alt=""></div>
     </section>
 </section>
 
