--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -6,24 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="headerfooter.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <title>Om os</title>
 </head>
 <body>
+<!--HEADER-->
+<header>
+    <img src="images/logo2.png" alt="logo">
+    
+    <nav>
+        <a href="omos.html">Om os</a>
+        <a href="øl.html">Ølspecialiteter</a>
+        <a href="begivenheder.html">Begivenheder</a>
+        <a href="">Kontakt</a>
+    </nav>
+
+    <nav class="navmobil"></nav>
+</header>
 
 <main>
-<!--HEADER-->
-    <header>
-        <img src="images/logo2.png" alt="logo">
-        
-        <nav>
-            <a href="omos.html">Om os</a>
-            <a href="øl.html">Ølspecialiteter</a>
-            <a href="begivenheder.html">Begivenheder</a>
-            <a href="">Kontakt</a>
-        </nav>
-
-        <nav class="navmobil"></nav>
-    </header>
 
 <!--BAGGRUNDSBILLEDE-->
 <section class="billedeet">
