--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -34,7 +34,7 @@
     <main>
         <!--TOP BILLEDE-->
         <div class="topbillede"><img src="images/bølger/to-bølger.svg" alt="bølger"></div>
-
+        
 
         <!--SIDENS HOVEDOVERSKRIFT-->
         <section class="sideoverskrift">
@@ -65,56 +65,79 @@
             <div class="ølliste">
                 <div class="faste-øl">
                     <h2>Faste øl</h2>
+                    <p>Lille / Stor</p>
                     <ol>
                         <li>
                             <div>
                                 <h3>Bayreuther Original</h3>
                                 <p class="pris">30 / 55 kr</p>
                             </div>
-                            <p></p>
+                            <div>
+                                <p>Helles lager 5,3%</p>
+                                <p>Sprød, frisk og fuld af smag </p>
+                            </div>
+                            
                         </li>
                         <li>
                             <div>
                                 <h3>Maisel’s Original</h3>
                                 <p class="pris">30 / 55 kr</p>
                             </div>
-                            <p></p>
+                            <div>
+                                <p>Weissbier 5,1%</p>
+                                <p>Mild, krydret af malt, frugt og nelliker med et strejf af af muskatnød</p>
+                            </div>
                         </li>
                         <li>
                             <div>
                                 <h3>Thornbridge Cocoa Wonderland</h3>
                                 <p class="pris">40 / 70 kr</p>
                             </div>
-                            <p></p>
+                            <div>
+                                <p>Porter 6,8%</p>
+                                <p>En fyldig, robust porter med naturlige mokkamaltsmag fra det komplekse maltkorn</p>
+                            </div>
                         </li>
                         <li>
                             <div>
                                 <h3>Sudden death</h3>
                                 <p class="pris">35 / 65 kr</p>
                             </div>
-                            <p></p>
+                            <div>
+                                <p>O.fest bier 5,8%</p>
+                                <p>Fyldig og karamelagtig maltkrop</p>
+                            </div>
                         </li>
                         <li>
                             <div>
                                 <h3>Siren Suspended in Ella</h3>
-                                <p class="pris"></p>
+                                <p class="pris">35 / 65 kr</p>
                             </div>
-                            <p></p>
+                            <div>
+                                <p>Pale ale 4%</p>
+                                <p>Mild, men med en god eftersmag af krydret malt</p>
+                            </div>
                         </li>
                         <li>
                             <div>
                                 <h3>Amundsen</h3>
-                                <p class="pris"></p>
+                                <p class="pris">50 / 90 kr</p>
                             </div>
 
-                            <p></p>
+                            <div>
+                                <p>Pastry sour 6,5%</p>
+                                <p>Kompleks profil af appelsinskal, vanilje, hindbær og tonka og god balance mellem det sure og søde</p>
+                            </div>
                         </li>
                         <li>
                             <div>
                                 <h3>Slowburn Vixen</h3>
-                                <p class="pris"></p>
+                                <p class="pris">40 / 70 kr</p>
                             </div>
-                            <p></p>
+                            <div>
+                                <p>West coast IPA 6,5%</p>
+                                <p>Jule-IPA’en for 2022 med en tør, smagfuld og bitter smagsprofil</p>
+                            </div>
                         </li>
                     </ol>
 
