--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -192,13 +192,13 @@
             <div>
                 <h2>Åbningstider</h2>
                 <ul>
-                    <p>Mandag: <time>14:00</time> - <time>00:00</time></p>
-                    <p>Tirsdag: <time>14:00</time> - <time>00:00</time></p>
-                    <p>Onsdag: <time>14:00</time> - <time>00:00</time></p>
-                    <p>Torsdag: <time>14:00</time> - <time>00:00</time></p>
-                    <p>Fredag: <time>12:00</time> - <time>02:00</time></p>
-                    <p>Lørdag: <time>12:00</time> - <time>02:00</time></p>
-                    <p>Søndag: <time>14:00</time> - <time>22:00</time></p>
+                    <li>Mandag: <time>14:00</time> - <time>00:00</time></li>
+                    <li>Tirsdag: <time>14:00</time> - <time>00:00</time></li>
+                    <li>Onsdag: <time>14:00</time> - <time>00:00</time></li>
+                    <li>Torsdag: <time>14:00</time> - <time>00:00</time></li>
+                    <li>Fredag: <time>12:00</time> - <time>02:00</time></li>
+                    <li>Lørdag: <time>12:00</time> - <time>02:00</time></li>
+                    <li>Søndag: <time>14:00</time> - <time>22:00</time></li>
                 </ul>
             </div>
         </section>
