Done med billeder og hover effect på kontakt os

--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -19,7 +19,7 @@
             <a href="omos.html">Om os</a>
             <a href="øl.html">Ølspecialiteter</a>
             <a href="begivenheder.html">Begivenheder</a>
-            <a href="">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
         </nav>
 
         <nav class="navmobil"></nav>
@@ -62,11 +62,11 @@
 
 <!--Sektion 3-->
 <section class=sektioner>
-    <div class="container"><img src="images/ølsmagninger.png" alt=""></div>
+    <div class="container"><img src="images/ølsmagninger.jpg" alt=""></div>
     <div class="text">
         <h2>Ølsmagninger</h2>
         <p>Derudover tilbyder vi også ølsmagninger ud-af-huset. Det kan passe til både den næste firmafest eller polterabend. Skriv gerne en besked eller ring til os med jeres ønsker - det praktiske finder I inde under kontaktsiden. </p>
-        <button class="button" type="button">Kontakt os</button>
+        <a href="contact.html" class="button">Kontakt os</a>
     </div>
 </section>
 
@@ -78,7 +78,6 @@
         </div>
         <div class="container"><img src="images/fodbold.png" alt=""></div>
     </section>
-</section>
 
     
 </body>
