--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -20,7 +20,7 @@
             <a href="omos.html">Om os</a>
             <a href="øl.html">Ølspecialiteter</a>
             <a href="begivenheder.html">Begivenheder</a>
-            <a href="">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
         </nav>
 
         <nav class="navmobil"><i class="fa-solid fa-bars"></i></nav>
