--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="øl.css">
     <link rel="stylesheet" href="headerfooter.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
 
 
     <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
