--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="headerfooter.css">
+    <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <title>Om os</title>
 </head>
