--- a/mobilefirst/menu.html
+++ b/mobilefirst/menu.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
     <title>Menu</title>
+    <style>
+        nav{
+            width:100%;
+
+            display:flex;            
+            align-items:center;
+            flex-direction:column;
+            gap:10px;
+        }
+
+        nav a{
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            text-transform:uppercase;
+            text-decoration:none;
+            font-size:15pt;
+            color:#CEA948;
+            width:100%;
+            text-align:center;
+            padding-top:5px;
+            padding-bottom:5px;
+        }
+
+        nav a:hover{
+            background-color:#204653;
+        }
+
+        nav img{
+            width:40%;
+        }
+    </style>
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html">Hjem</a>
+        <a href="omos.html">Om os</a>
+        <a href="øl.html">Ølspecialiteter</a>
+        <a href="begivenheder.html">Begivenheder</a>
+        <a href="#">Kontakt</a>
+    </nav>
 </body>
 </html>
