Indsatte bølge på underside

--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -71,6 +71,12 @@
         </div>
     </section>
 
+    <section class="wavetwo">
+        <div class="wavetwo">
+        <img src="images/bølger/en-bølge.svg" alt="enbølge">
+        </div>    
+    </section>
+
 <!--FOOTER-->
 <footer>
     <img src="images/bølger/to-bølger-omvendt.svg" class="to-bølger-omvendt" alt="omvendte bølger">
