--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Væskebalancen</title>
-
+    <link rel="stylesheet" href="forside.css">
     <link rel="stylesheet" href="stylestest.css">
     <link rel="stylesheet" href="headerfooter.css">
     <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
 
+<!--HEADER-->
 <body>
     <header>
         <img src="images/logolaptop.png" alt="logo">
@@ -24,11 +25,51 @@
         </nav>
 
         <nav class="navmobil"><i class="fa-solid fa-bars"></i></nav>
-
     </header>
 
-    <main></main>
+    <!--MAIN-->
+<main>
 
+    <Section class="cardsforside">
+        <div><img src="images/forsideomos.png" alt=""></div>
+        <div class="textforside">
+            <h2>Om os</h2>
+            <p>Interessen for specialøl og nye smage stiger. Få smagsprøver og anbefalinger fra personalet og udvid din ølhorisont.
+                Vi ser ikke specialøl som en niche, vi ser specialøl som noget der skal deles.
+                </p>
+                <a href="omos.html" class="button">Læs mere</a>
+        </div>
+    </Section>
+
+    <Section class="cardsforside">
+        <div class="textforside">
+            <h2>Ølspecialiteter</h2>
+            <p>Vi tilbyder 14 forskellige øl på fad som ugentligt bliver udskiftet.
+                Vi har desuden et stort udvalg af dåse og flaskeøl.
+                <a href="øl.html" class="button">Læs mere</a>
+                </p>
+        </div>
+        <div><img src="images/ølspecialiteter.png" alt=""></div>
+    </Section>
+        
+    <section class="cardsforside">
+    <div><img src="images/baggrundbegivenheder.jpg" alt=""></div>
+        <div class="textforside">
+            <h2>Begivenheder</h2>
+            <p>Se fodbold i fællesskab på vores fladskærm, spil diverse brætspil eller kom til tirsdagsquiz.
+                Vi tilbyder desuden ud-af-huset-ølsmagninger.
+                <a href="begivenheder.html" class="button">Læs mere</a>
+                </p>
+        </div>
+    </section>
+
+
+
+
+
+</main>
+
+    <!--FOOTER-->
     <footer>
         <img src="images/bølger/to-bølger-omvendt.svg" class="to-bølger-omvendt" alt="omvendte bølger">
         <section>
