--- a/mobilefirst/øl.html
+++ b/mobilefirst/øl.html
@@ -44,7 +44,7 @@
 
         <!--KORT: VORES UDVALG-->
         <section class="kortudvalg">
-            <div><img src="images/udvalg2.png"></div>
+            <div><img src="images/udvalg2.png" alt="øl udvalg"></div>
             <div>
                 <h1>Vores udvalg</h1>
                 <p>Hos Væskebalancen har vi altid 14 øl på fad - derunder to faste - og køleskabet fyldt til randen med
@@ -70,18 +70,18 @@
                     <ol>
                         <li>
                             <div>
-                                <h3>Bayreuther Original</h3>
+                                <h3>1. Bayreuther Original</h3>
                                 <p class="pris">30 / 55 kr</p>
                             </div>
                             <div>
                                 <p>Helles lager 5,3%</p>
-                                <p>Sprød, frisk og fuld af smag </p>
+                                <p>Sprød, frisk og fuld af smag</p>
                             </div>
                             
                         </li>
                         <li>
                             <div>
-                                <h3>Maisel’s Original</h3>
+                                <h3>2. Maisel’s Original</h3>
                                 <p class="pris">30 / 55 kr</p>
                             </div>
                             <div>
@@ -91,7 +91,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>Thornbridge Cocoa Wonderland</h3>
+                                <h3>3. Thornbridge Cocoa Wonderland</h3>
                                 <p class="pris">40 / 70 kr</p>
                             </div>
                             <div>
@@ -101,7 +101,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>Sudden death</h3>
+                                <h3>4. Sudden death</h3>
                                 <p class="pris">35 / 65 kr</p>
                             </div>
                             <div>
@@ -111,7 +111,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>Siren Suspended in Ella</h3>
+                                <h3>5. Siren Suspended in Ella</h3>
                                 <p class="pris">35 / 65 kr</p>
                             </div>
                             <div>
@@ -121,7 +121,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>Amundsen</h3>
+                                <h3>6. Amundsen</h3>
                                 <p class="pris">50 / 90 kr</p>
                             </div>
 
@@ -132,7 +132,7 @@
                         </li>
                         <li>
                             <div>
-                                <h3>Slowburn Vixen</h3>
+                                <h3>7. Slowburn Vixen</h3>
                                 <p class="pris">40 / 70 kr</p>
                             </div>
                             <div>
@@ -146,14 +146,78 @@
 
                 <div class="nyeste-øl">
                     <h2>Nyeste øl</h2>
+                    <p>Lille / Stor</p>
                     <ol>
-                        <li>hej</li>
-                        <li>heh</li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>
+                            <div>
+                                <h3>8. Sudden death</h3>
+                                <p class="pris">50 / 90 kr</p>
+                            </div>
+                            <div>
+                                <p>NE DIPA 8%</p>
+                                <p>Perfekt og frisk frugtsuppe til juledagene</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h3>9. Gamma Crimmus</h3>
+                                <p class="pris">40 / 70 kr</p>
+                            </div>
+                            <div>
+                                <p>IPA 6%</p>
+                                <p>Klassisk IPA med en frisk undertone af appelsinskal</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h3>10. Indeed</h3>
+                                <p class="pris">40 / 70 kr</p>
+                            </div>
+                            <div>
+                                <p>Strawberry sour 5%</p>
+                                <p>Frisk sour med en sommerlig smag af jordbær </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h3>11. Holy goat Funk Weapon</h3>
+                                <p class="pris">55 / 100 kr</p>
+                            </div>
+                            <div>
+                                <p>Mixed ferm sour 5,8%</p>
+                                <p>Saftig, sød og sur citrus, hvide ferskner og ananas med tropiske noter</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h3>12. Timmermans Gordons X-mas</h3>
+                                <p class="pris">35 / 65 kr</p>
+                            </div>
+                            <div>
+                                <p>Dubbel 8,8%</p>
+                                <p>Intens smag med træagtige noter og en sød base</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h3>13. V. Br., Whipped Nougat Chocolate</h3>
+                                <p class="pris">45 / 80 kr</p>
+                            </div>
+                            <div>
+                                <p>Stout 7%</p>
+                                <p>Mælkechokolade stout med let vanilje nougat smag</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <h3>14. V. Br., Coconut Milk Chocolate</h3>
+                                <p class="pris">50 / 90 kr</p>
+                            </div>
+                            <div>
+                                <p>Stout 10%</p>
+                                <p>Saftig eksotisk kokos, indhyllet i en tyk og cremet mælkechokolade smag</p>
+                            </div>
+                        </li>
                     </ol>
                 </div>
             </div>
