--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -13,7 +13,7 @@
 <body>
 <!--HEADER-->
 <header>
-    <img src="images/logo2.png" alt="logo">
+    <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
     
     <nav>
         <a href="omos.html">Om os</a>
