--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -30,6 +30,7 @@
     <!--MAIN-->
 <main>
 
+    <!--Kort et-->
     <Section class="cardsforside">
         <div><img src="images/forsideomos.png" alt=""></div>
         <div class="textforside">
@@ -41,6 +42,8 @@
         </div>
     </Section>
 
+
+    <!--Kort to-->
     <Section class="cardsforside">
         <div class="textforside">
             <h2>Ølspecialiteter</h2>
@@ -51,18 +54,21 @@
         </div>
         <div><img src="images/ølspecialiteter.png" alt=""></div>
     </Section>
-        
+
+
+    <!--Kort tre--> 
     <section class="cardsforside">
     <div><img src="images/baggrundbegivenheder.jpg" alt=""></div>
         <div class="textforside">
             <h2>Begivenheder</h2>
             <p>Se fodbold i fællesskab på vores fladskærm, spil diverse brætspil eller kom til tirsdagsquiz.
                 Vi tilbyder desuden ud-af-huset-ølsmagninger.
-                <a href="begivenheder.html" class="button">Læs mere</a>
                 </p>
+                <a href="begivenheder.html" class="button">Læs mere</a>
         </div>
     </section>
 
+<hr>
 
 
 
