--- a/mobilefirst/omos.html
+++ b/mobilefirst/omos.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <title>Om os</title>
+
+    <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!--HEADER-->
