--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -15,7 +15,7 @@
 <!--HEADER-->
 <body>
     <header>
-        <img src="images/logolaptop.png" alt="logo">
+        <img src="images/logo2.png" alt="logo">
 
         <nav>
             <a href="omos.html">Om os</a>
