--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -7,15 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Væskebalancen</title>
     <link rel="stylesheet" href="forside.css">
-    <link rel="stylesheet" href="stylestest.css">
     <link rel="stylesheet" href="headerfooter.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
 
 <!--HEADER-->
 <body>
     <header>
-        <img src="images/logolaptop.png" alt="logo">
+        <img src="images/logo2.png" alt="logo">
 
         <nav>
             <a href="omos.html">Om os</a>
@@ -24,7 +25,10 @@
             <a href="contact.html">Kontakt</a>
         </nav>
 
-        <nav class="navmobil"><i class="fa-solid fa-bars"></i></nav>
+        <nav class="navmobil">
+            <i class="fa-solid fa-bars"></i>
+        </nav>
+
     </header>
 
     <!--MAIN-->
