--- a/mobilefirst/index.html
+++ b/mobilefirst/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="forside.css">
     <link rel="stylesheet" href="stylestest.css">
     <link rel="stylesheet" href="headerfooter.css">
+    <link rel="icon" type="image/x-icon" href="images/ikoner/favicon.ico">
     <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
 
