--- a/mobilefirst/contact.html
+++ b/mobilefirst/contact.html
@@ -7,6 +7,7 @@
     <title>Kontakt</title>
     <link rel="stylesheet" href="contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <!--links-->
