--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="stylesbegivnheder.css">
     <link rel="stylesheet" href="headerfooter.css">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/60cddcb918.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 
 <!--Header-->
     <header>
-        <img src="images/logolaptop.png" alt="logo">
+        <img src="images/logo2.png" alt="logo">
         
         <nav>
             <a href="omos.html">Om os</a>
